fix: left align mobile back link

--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -214,7 +214,7 @@
     
             display: flex;
             align-items: center;
-            justify-content: center;
+            
             gap: 14px;
 
             @include clamp(font-size, 14, 20);
